small fix to prevent exception due to item duplication in saveAll method, changed java version to 19 supported by maven